# HFST

./: .gitignore  README.md
PseudoClient/: CMakeLists.txt
PseudoClient/include/: ClientMessenger.h  TaifexORGenerator.h  TaifexOrder.h  TaifexOrderClient.h  TaifexOrderUtility.h
PseudoClient/src/: ClientMessenger.cpp  TaifexORGenerator.cpp  TaifexOrderClient.cpp  TaifexOrderUtility.cpp
PseudoServer/: CMakeLists.txt
PseudoServer/include/: ServerMessenger.h  TaifexORGenerator.h  TaifexOrder.h  TaifexOrderServer.h  TaifexOrderUtility.h  TestClient.h
PseudoServer/src/: ServerMessenger.cpp  TaifexORGenerator.cpp  TaifexOrderServer.cpp  TaifexOrderUtility.cpp  TestClient.cpp
PseudoServer_HFFT/: CMakeLists.txt
PseudoServer_HFFT/include/: TaifexORGenerator.h  TaifexOrderServer.h
PseudoServer_HFFT/src/: TaifexOrderServer.cpp  TestClient.cpp
docker/: Dockerfile  docker-compose.yml
